--- a/vite-redux-toolkit/package.json
+++ b/vite-redux-toolkit/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.3.4",
+    "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-thunks": "^1.0.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.9",
