--- a/vite-redux-toolkit/package.json
+++ b/vite-redux-toolkit/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.3.4",
     "immer": "^10.1.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
